--- a/public/css/style.css
+++ b/public/css/style.css
@@ -916,6 +916,15 @@ h3 {
   }
 }
 
+@media (max-width: 767px) {
+  /* line 56, ../../Arafath/CL/CL October/214. App Landing Page/HTML/scss/_header.scss */
+  .header-logo {
+    text-align: left;
+    height: 60px;
+    width: 60px;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
   /* line 56, ../../Arafath/CL/CL October/214. App Landing Page/HTML/scss/_header.scss */
   .header-area .main-header-area .logo-img {
